# ChatReact

./: .gitignore  README.md  bridge.js
backend/: CMakeLists.txt
backend/include/: client.hpp  config.hpp  message.hpp  server.hpp  utils.hpp
backend/src/: client.cpp  client_main.cpp  config.cpp  message.cpp  server.cpp  server_main.cpp  utils.cpp
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatWindow.jsx  MessageInput.jsx  UserList.jsx
frontend/src/hooks/: useWebSocket.js
